Wed Sep 22 17:55:31 1999  David Edelsohn  <edelsohn@gnu.org>

	* rs6000.c (expand_block_move): DImode loads and stores require
	word-aligned displacements.  Increment address registers with
	adddi3 on 64-bit platform.  Use TARGET_POWERPC64 not TARGET_64BIT.

Wed Sep 22 07:07:44 1999  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>

	* config/i386/sol2.h (PREFERRED_DEBUGGING_TYPE): Use stabs.
	(ASM_SPEC): Moved from sol2dbg.h.  Added work-around for gas.
	* config/i386/sol2dbg.h: Removed.
	* config/i386/sol2gas.h: New file, to enable gas work-around.
	* configure.in: Use i386/sol2gas.h on Solaris/x86 --with-gas.
	Don't use sol2dbg.h.
	* configure: Rebuilt.

Wed Sep 15 21:20:38 1999  Mark Mitchell  <mark@codesourcery.com>

	* c-typeck.c (qualify_type): Merge qualifiers from both types.

Wed Sep 15 10:07:27 1999  Scott Bambrough <scottb@netwinder.org>
 
	* config/arm/linux-elf.h: define NO_IMPLICIT_EXTERN_C

Tue Sep  7 16:50:59 1999  David Edelsohn  <edelsohn@gnu.org>

	* rs6000.h (ASM_FILE_START): Specify complete filename, including
	path, in .file directive.

Tue Sep  7 01:27:21 1999  Jeffrey A Law  (law@cygnus.com)

	Thu Sep  2 00:06:43 1999  Jeffrey A Law  (law@cygnus.com)
	* fold-const.c (fold_range_test): Do not try to fold the range
	test if the rhs or lhs has side effects.

	Sun Aug 29 03:27:23 1999  Scott Weikart <scott@igc.apc.org>
	* fix-header.c (main): Do not pass a null pointer to strcmp.

	Thu Aug 19 14:42:38 1999  Mike Stump <mrs@wrs.com>
				  Mark Mitchell <mark@codesourcery.com>
	* c-common.c (c_get_alias_set): Fix support for pointers and
	references.

	Fri Aug 27 01:03:48 1999  Jim Kingdon  <http://developer.redhat.com>
	with much help from Jeffrey A Law and Richard Henderson
	* i386.md: In the 6 insns which call output_fix_trunc,
	earlyclobber operands[0].

	Fri Aug 27 01:01:51 1999  Philip Blundell  <pb@nexus.co.uk>
	* jump.c (duplicate_loop_exit_test): Call reg_scan_update after
	creating new registers.
